moved all data manipulation to SQL

--- a/Flights/appsettings.json
+++ b/Flights/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Flights": "Data Source=localhost,1433;Database=Flights;User id=saRoss;Password=1234!Secret;Encrypt=False;" // Encrypt=False shouldn't be required, fix this.
+  }
 }
